trevor/src/index.css
@font-face {
	font-family: "TopazPlusA1200";
	src: url("/fonts/Topaza600a1200a400.woff2") format("woff2");
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: "TopazPlusA1200";
	src: url("/fonts/TopazPlusa600a1200a4000.woff2") format("woff2");
	font-weight: normal;
	font-style: normal;
	font-display: swap;
}

:root {
	font-family:
		"TopazPlusA1200", system-ui, Avenir, Helvetica, Arial, sans-serif; /* Use the Amiga font */
	/* line-height: 1.1; */
	font-weight: 400;

	color-scheme: light;
	/*color: black;*/
	background-color: #c0c0c0; /* Amiga Workbench background color */

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	--black: #2c281e;
	--browntext: rgb(123, 85, 15);
	--rack-bg-color: #d0d0d0;
	--button-bg-color: #d0d0d0;

	color: var(--black);
}

html {
	filter: sepia(0.15) hue-rotate(5deg);
}

body {
	padding: 0;
	margin: 0;

	width: 100vw;
	height: 100vh;
}

#root {
	display: flex;
	flex-direction: column;
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100%;
	font-family:
		"TopazPlusA1200", system-ui, Avenir, Helvetica, Arial, sans-serif; /* Use the Amiga font */
}

button,
select,
pre,
textarea,
input {
	font-family: inherit;
}

pre {
	font-size: 18px;
}

a {
	font-weight: 500;
	color: #000080; /* Amiga Workbench link color */
	text-decoration: none;
}
a:hover {
	color: orange; /* Hover color for links */
}

h1 {
	font-size: 1.5em;
	line-height: 1.2;
	color: var(--black);
}

h3 {
	margin-top: 0px;
	margin-bottom: 2px;
	font-size: 16px;
}

p {
	font-size: 14px;
}

input[type="checkbox"] {
	border: 2px solid gray;
}

button,
input,
textarea,
select {
	background-color: var(--rack-bg-color);
	border: 2px solid gray;
	color: var(--black);
	padding: 4px;
	cursor: pointer;
}
button:hover,
input:hover,
textarea:hover,
select:hover {
	background-color: #e0e0e0; /* Slightly lighter hover effect */
}
button:focus,
input:focus,
textarea:focus,
select:focus {
	outline: none;
	/* border-color: #0000ff; */
	border-color: orange;
}

label {
	color: #000;
	font-size: 14px;
}

select {
	direction: rtl;
	text-align: left;
}

input:disabled,
select:disabled,
label input:disabled + span,
label select:disabled + span {
	color: var(--black);
	background-color: #e0e0e0; /* Keep the Amiga-style background */
}

input[type="text"]:disabled {
	color: #808080; /* Greyish text for disabled text inputs */
}

details {
	width: 100%;
	font-size: 15px;
	color: var(--browntext);
}

details > summary {
	background-color: orange;
	padding: 5px;
	padding-bottom: 7px;
	cursor: pointer;
}

details[open]::details-content {
	padding-left: 6px;
	padding-right: 5px;
	padding-top: 3px;
}

.details-content {
	display: flex;
	flex-direction: column;
	gap: 3px;
}

.details-content .Button {
	text-align: left;
}

.details-content .Button span {
	padding-left: 5px;
}

.app-layout {
	display: flex;
	flex-direction: column;
	height: 100%;
	width: 100%;
	background-color: lightgray;
}

.top-section {
	display: flex;
	padding: 2px;
	padding-bottom: 1px;
}

.Button {
	display: flex;
	flex-direction: column;
	text-align: center;
	justify-content: center;
	border: 2px solid gray;
	cursor: pointer;
	pointer-events: auto;
	color: gray;
}

.Button:not(.clicked):hover {
	background-color: #e0e0e0;
}

.Button.clicked:hover {
	background-color: orange;
}

.Button.active {
	background-color: gold;
}

.Button.small {
	min-width: 12px;
	min-height: 12px;
	width: 12px;
}

.Button.big {
	min-width: 23px;
	min-height: 23px;
	width: 23px;
	height: 23px;
}

.information-panel input,
.information-panel label,
.information-panel select {
	color: var(--black);
	font-size: 12px;
}

.logWindow {
	position: fixed;
	background: var(--black);
	color: white;
	padding: 4px 8px;
	border-radius: 4px;
	pointer-events: none;
	z-index: 1000;
	width: 500px;
	height: 300px;
	overflow-y: auto;
}

.logWindow pre {
	font-size: 15px;
	white-space: pre-wrap;
	word-wrap: break-word;
	overflow-x: hidden,;
}

.three-panel-layout {
	display: flex;
	height: 100vh;
	background-color: var(--rack-bg-color);
	border: 2px solid #808080;
	box-shadow:
		inset -1px -1px 0px #ffffff,
		inset 1px 1px 0px #000000;
}

.information-panel {
	display: flex;
	flex-direction: column;
	gap: 2px;
	padding: 4px;
	margin: 2px;
}

.top-right-panel,
.bottom-right-panel {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: flex-start;
	padding: 4px;
	border-bottom: 2px solid #808080;
	overflow-y: auto;
}

.bottom-right-panel {
	border-bottom: none;
	overflow: auto;
}

.top-panel {
	flex: 1; /* 50% of the vertical space */
	display: flex;
	background-color: #e0e0e0;
	border-bottom: 2px solid #808080;
	box-shadow:
		inset -1px -1px 0px #ffffff,
		inset 1px 1px 0px #000000;
}

.top-panel .midi-output,
.top-panel .midi-inputs {
	flex: 1; /* 50% of the horizontal space */
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	border-right: 2px solid #808080;
	padding: 10px;
}

.top-panel .midi-inputs {
	border-right: none; /* Remove border for the last panel */
}

.middle-panel {
	flex: 1;
	background-color: #e0e0e0;
	border-bottom: 2px solid #808080;
	box-shadow:
		inset -1px -1px 0px #ffffff,
		inset 1px 1px 0px #000000;
}

.bottom-panel {
	flex: 1;
	display: flex;
	background-color: #e0e0e0;
	box-shadow:
		inset -1px -1px 0px #ffffff,
		inset 1px 1px 0px #000000;
}

.instance-creation {
	position: relative;
	display: flex;
	flex-direction: column;
	width: 100%;
	height: auto;
	background-color: var(--rack-bg-color);
	gap: 2px;
}

.instance-creation-main-panel {
	display: flex;
	width: 100%;
	flex-direction: row;
	background-color: #e0e0e0;
	max-height: 250px;
}
/* ... */

